--- a/mywork/program/後期rossler_random/.vscode/settings.json
+++ b/mywork/program/後期rossler_random/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "julia.environmentPath": "/Users/manqueenmannequin/mygit/B4thesis_public/mywork/program/後期_random"
+    "julia.environmentPath": "/Users/manqueenmannequin/mygit/B4thesis_public/mywork/program/後期rossler_random"
 }
